# ancient

./: .replit  Cargo.toml  README.md  cargo.toml  readme.md  sf.conf  shell.nix
examples/: hello.sf
lib/diamond/: Cargo.toml
lib/diamond/src/: lib.rs
lib/fractal/: Cargo.toml
lib/fractal/src/: lib.rs
lib/parser/: Cargo.toml  build.rs  readme.md
lib/parser/src/: .ast.rs.swp  .lib.rs.swp  ast.rs  indentation.rs  lexer.rs  lib.rs  snowflake.lalrpop  token.rs
lib/tag/: Cargo.toml
lib/tag/src/: .lib.rs.swp  lib.rs
nix/: default.nix  sources.json
parser/: Cargo.toml  README.md
parser/src/: ast.rs  crystaline.lalrpop  indentation.rs  lib.rs  token.rs
src/: main.rs
src/flurry/: Cargo.toml
src/lib/: Cargo.toml
