[package]
name = "calc"
version = "0.1.0"
authors = ["brecert <11599528+Brecert@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1.3.9"
logos = "0.11.4"
num-bigint = "0.3.0"
honeycomb = "0.1.4"
nom = "5.1.2"

[dev-dependencies]
indoc = "1.0"