[package]
name = "parser"
version = "0.1.0"
authors = ["the snowflake authors <whiskerdev@protonmail.com>"]
edition = "2018"
build = "build.rs"
license = "MPL-2.0"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1.5.5"
logos = "0.11.4"
num-bigint = "0.3.0"

[dev-dependencies]
indoc = "1.0"
